--- a/index.html
+++ b/index.html
@@ -1,10 +1,28 @@
 <!doctype html>
 <html ng-app="app" ng-controller="client">
   <head>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.8/angular.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.7.8/angular.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.7.8/angular-touch.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.7.8/angular-animate.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.7.8/angular-aria.js"></script>
+    <script src="http://ui-grid.info/docs/grunt-scripts/csv.js"></script>
+    <script src="http://ui-grid.info/docs/grunt-scripts/pdfmake.js"></script>
+    <script src="http://ui-grid.info/docs/grunt-scripts/vfs_fonts.js"></script>
+    <script src="http://ui-grid.info/docs/grunt-scripts/lodash.min.js"></script>
+    <script src="http://ui-grid.info/docs/grunt-scripts/jszip.min.js"></script>
+    <script src="http://ui-grid.info/docs/grunt-scripts/excel-builder.dist.js"></script>
+    <script src="ui-grid.min.js"></script>
+    <link rel="stylesheet" href="ui-grid.min.css" type="text/css">
     <script src="app.js"></script>
+    <style>
+      .myGrid {
+    width: 500px;
+    height: 250px;
+  }
+    </style>
   </head>
   <body>
+    <div ui-grid="myData" ui-grid-edit class="myGrid"></div>
     <table style="text-align: center">
         <tr>
             <th>Company ID</th>
