Add the possibility to add a company in the data grid
Added the ui grid font.
Moved the css in a different file.

--- a/index.html
+++ b/index.html
@@ -15,14 +15,10 @@
     <script src="ui-grid.min.js"></script>
     <link rel="stylesheet" href="ui-grid.min.css" type="text/css">
     <script src="app.js"></script>
-    <style>
-      .myGrid {
-    width: 100%;
-    height: 250px;
-  }
-    </style>
+    <link rel="stylesheet" href="main.css" type="text/css">
   </head>
   <body>
+    <button type="button" id="addData" class="btn btn-success" ng-click="addData()">Add Data</button>
     <div ui-grid="grid" ui-grid-edit ui-grid-expandable class="myGrid"></div>
   </body>
 </html>
