Add a function for adding beneficial owners, linked to the header button

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="main.css" type="text/css">
   </head>
   <body>
-    <button type="button" id="addData" class="btn btn-success" ng-click="addData()">Add Data</button>
+    <button type="button" class="btn" ng-click="addCompany()">Add Company</button>
     <div ui-grid="grid" ui-grid-edit ui-grid-expandable class="myGrid"></div>
   </body>
 </html>
