--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.7.4/angular.js"></script>
     <script src="ui-grid.min.js"></script>
     <link rel="stylesheet" href="ui-grid.min.css" type="text/css">
+    <script src="ngDialog.min.js"></script>
+    <link rel="stylesheet" href="ngDialog.min.css" type="text/css">
+    <link rel="stylesheet" href="ngDialog-theme-default.min.css" type="text/css">
+    <script src="addBeneficialOwnerDialogTemplate.js"></script>
     <script src="app.js"></script>
     <link rel="stylesheet" href="main.css" type="text/css">
   </head>
