Add local angular js

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html ng-app="app" ng-controller="client">
   <head>
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.7.4/angular.js"></script>
+    <script src="angular.min.js"></script>
     <script src="ui-grid.min.js"></script>
     <link rel="stylesheet" href="ui-grid.min.css" type="text/css">
     <script src="ngDialog.min.js"></script>
