Add the functionality to add a beneficial owner with ng dialog

--- a/addBeneficialOwnerDialogTemplate.html
+++ b/addBeneficialOwnerDialogTemplate.html
@@ -1,9 +1,9 @@
 <div style="text-align:center">
     <h2>Add a beneficial owner<h2>
     <h4 style="display:inline">Full name: </h4>
-    <input type="text" placeholder="Full name" ng-model="name" />
+    <input type="text" placeholder="Full name" ng-model="fullName" />
     <div class="ngdialog-buttons">
-        <button type="button" class="btn" ng-click="confirm(name)">OK</button>
+        <button type="button" class="btn" ng-click="confirm(fullName)">OK</button>
         <button type="button" class="btn" ng-click=closeThisDialog("Cancel")>Cancel</button>
     </div>
 </div>
