--- a/addBeneficialOwnerDialogTemplate.html
+++ b/addBeneficialOwnerDialogTemplate.html
@@ -4,9 +4,9 @@
         <h6 style="display:inline">Full name: </h6>
         <input type="text" placeholder="Full name" ng-model="fullName" class="dialogInput"/>
     </div>
-    <p ng-show="!(/^[a-zA-Z][a-zA-Z\s]*$/.test(fullName))" style="font-size: 12px;color:#bc1841">Full name should start with at least one letter and should be formed only with letters and spaces.</p>
+    <p ng-show="!(fullName.match('^[a-zA-Z][a-zA-Z\s]*$').length)" style="font-size: 12px;color:#bc1841">Full name should start with at least one letter and should be formed only with letters and spaces.</p>
     <div class="ngdialog-buttons">
-        <button type="button" ng-disabled="!(/^[a-zA-Z][a-zA-Z\s]*$$/.test(fullName))" class="btn" ng-click="confirm(fullName)">OK</button>
+        <button type="button" ng-disabled="!(fullName.match('^[a-zA-Z][a-zA-Z\s]*$').length)" class="btn" ng-click="confirm(fullName)">OK</button>
         <button type="button" class="btn cancelBtn" ng-click=closeThisDialog("Cancel")>Cancel</button>
     </div>
 </div>
