Add css for disabled button

--- a/addBeneficialOwnerDialogTemplate.html
+++ b/addBeneficialOwnerDialogTemplate.html
@@ -6,7 +6,7 @@
     </div>
     <p ng-show="!(fullName.match('^[a-zA-Z][a-zA-Z\s]*$').length)" style="font-size: 12px;color:#bc1841">Full name should start with at least one letter and should be formed only with letters and spaces.</p>
     <div class="ngdialog-buttons">
-        <button type="button" ng-disabled="!(fullName.match('^[a-zA-Z][a-zA-Z\s]*$').length)" class="btn" ng-click="confirm(fullName)">OK</button>
+        <button type="button" ng-disabled="!(fullName.match('^[a-zA-Z][a-zA-Z\s]*$').length)" class="btn okButton" ng-click="confirm(fullName)">OK</button>
         <button type="button" class="btn cancelBtn" ng-click=closeThisDialog("Cancel")>Cancel</button>
     </div>
 </div>
