--- a/addBeneficialOwnerDialogTemplate.html
+++ b/addBeneficialOwnerDialogTemplate.html
@@ -1,12 +1,14 @@
-<div style="text-align:center">
-    <h2>Add a beneficial owner<h2>
+<form name="form" style="text-align:center">
+    <h2>Add a beneficial owner</h2>
     <div class="inputFields">
         <h6 style="display:inline">Full name: </h6>
-        <input type="text" placeholder="Full name" ng-model="fullName" class="dialogInput"/>
+        <input type="text" placeholder="Full name" name="fullName" ng-model="fullName" class="dialogInput" required ng-pattern="/^[a-zA-Z\s]*$/"/>
     </div>
-    <p ng-show="!(fullName.match('^[a-zA-Z][a-zA-Z\s]*$').length)" style="font-size: 12px;color:#bc1841">Full name should start with at least one letter and should be formed only with letters and spaces.</p>
+    <p ng-show="form.fullName.$invalid" style="color:#bc1841">
+        Full name should contain at least one letter and should be formed only with letters and spaces.
+    </p>
     <div class="ngdialog-buttons">
-        <button type="button" ng-disabled="!(fullName.match('^[a-zA-Z][a-zA-Z\s]*$').length)" class="btn okButton" ng-click="confirm(fullName)">OK</button>
+        <button type="button" ng-disabled="form.fullName.$invalid" class="btn okButton" ng-click="confirm(fullName)">OK</button>
         <button type="button" class="btn cancelBtn" ng-click=closeThisDialog("Cancel")>Cancel</button>
     </div>
-</div>
+</form>
