Add regex validators

--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
   </head>
   <body>
     <button type="button" class="btn" ng-click="addCompany()">Add Company</button>
-    <div ui-grid="grid" ui-grid-edit ui-grid-cellNav ui-grid-move-columns ui-grid-expandable class="myGrid"></div>
+    <div ui-grid="grid" ui-grid-resize-columns ui-grid-edit ui-grid-validate ui-grid-cellNav ui-grid-move-columns ui-grid-expandable class="myGrid"></div>
   </body>
 </html>
