--- a/addBeneficialOwnerDialogTemplate.html
+++ b/addBeneficialOwnerDialogTemplate.html
@@ -2,10 +2,13 @@
     <h2>Add a beneficial owner</h2>
     <div class="inputFields">
         <h6 style="display:inline">Full name: </h6>
-        <input type="text" placeholder="Full name" name="fullName" ng-model="fullName" class="dialogInput" required ng-pattern="/^[A-Z\s]*$/i"/>
+        <input type="text" placeholder="Full name" name="fullName" ng-model="fullName" class="dialogInput" ng-maxlength="50" required ng-pattern="/^[A-Z\s]*$/i"/>
     </div>
-    <p ng-show="form.fullName.$invalid" style="color:#bc1841">
+    <p ng-show="form.fullName.$dirty && form.fullName.$error.pattern" class="errorMessage">
         Full name must contain at least one letter and must be formed only with letters and spaces.
+    </p>
+    <p ng-show="form.fullName.$error.maxlength" class="errorMessage">
+        Full name must contain maximum 50 characters.
     </p>
     <div class="ngdialog-buttons">
         <button type="button" ng-disabled="form.fullName.$invalid" class="btn okButton" ng-click="confirm(fullName)">OK</button>
