--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   </head>
   <body>
     <button type="button" class="btn" ng-click="addCompany()">Add Company</button>
-    <div ui-grid="grid" ui-grid-resize-columns ui-grid-edit ui-grid-validate ui-grid-cellNav ui-grid-move-columns ui-grid-expandable class="myGrid"></div>
+    <div ui-grid="grid" ui-grid-resize-columns ui-grid-edit ui-grid-validate ui-grid-cellNav ui-grid-move-columns ui-grid-expandable class="grid"></div>
+    <img ng-show="loading" src="giphy.gif" class="loading"/>
   </body>
 </html>
