Fix a scrolling bug when using expandable rows
There was a scrolling bug: when the last row was expanded and the user scrolls, the expanded rows disappears. I found a fix here (https://github.com/angular-ui/ui-grid/issues/4508)

This commit will also change the angularjs version because ui-grid 3.1.1 doesn't support angularjs greater than 1.4.x

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html ng-app="app" ng-controller="client">
   <head>
     <script src="angular.min.js"></script>
-    <script src="ui-grid.min.js"></script>
+    <script src="ui-grid.js"></script>
     <link rel="stylesheet" href="ui-grid.min.css" type="text/css">
     <script src="ngDialog.min.js"></script>
     <link rel="stylesheet" href="ngDialog.min.css" type="text/css">
