Change the email field from "EMail" to "Email"

--- a/addCompanyDialogTemplate.html
+++ b/addCompanyDialogTemplate.html
@@ -28,7 +28,7 @@
             Country must contain maximum 30 characters.
         </p> 
         <label>Email: </label>
-        <input type="text" placeholder="Email" name="email" ng-model="newCompany.EMail" class="dialogInput" ng-maxlength="256" ng-pattern="/^[A-Z0-9!#$%&'*+-/=?^_`{|}~]+@[A-Z0-9.-]+\.[A-Z]+$/i"/><br/>       
+        <input type="text" placeholder="Email" name="email" ng-model="newCompany.Email" class="dialogInput" ng-maxlength="256" ng-pattern="/^[A-Z0-9!#$%&'*+-/=?^_`{|}~]+@[A-Z0-9.-]+\.[A-Z]+$/i"/><br/>       
         <p ng-show="form.email.$error.pattern" class="errorMessage">
             Email is invalid.
         </p>
